--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^14.2.2",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
+    "@angular/forms": "^14.2.3",
+    "@angular/material": "^14.2.2",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@coreui/angular": "^4.2.3",
+    "@coreui/icons-angular": "^4.2.0",
+    "@syncfusion/ej2-angular-grids": "^20.2.49",
+    "@syncfusion/ej2-angular-popups": "^20.2.49",
+    "@syncfusion/ej2-angular-richtexteditor": "^20.2.50",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
